# ThinkAct

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  agent_loop.py  llm_client.py  logging_utils.py  memory.py  models.py  parser.py  prompt.py  safety.py  state.py  tool_registry.py  tools.py
tests/: test_agent_loop.py  test_llm_client.py  test_parser.py  test_safety.py  test_tools.py
