[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkact-agent"
version = "0.1.0"
description = "A minimal explicit ReAct-style agent framework with strict JSON tool commands."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["agent"]